# prj_demo

./: CMakeLists.txt  README.md
msvc10/: prj_demo.sln
msvc10/base/: base.vcxproj  base.vcxproj.filters
msvc10/log/: log.vcxproj  log.vcxproj.filters
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/base/: simp_helper.cpp  simp_helper.h
src/common/log/: CMakeLists.txt  simp_appender.cpp  simp_appender.h  simp_appendermanager.cpp  simp_appendermanager.h  simp_consoleappender.cpp  simp_consoleappender.h  simp_defaultlayout.cpp  simp_defaultlayout.h  simp_fileappender.cpp  simp_fileappender.h  simp_layout.cpp  simp_layout.h  simp_logevent.cpp  simp_logevent.h  simp_logger.cpp  simp_logger.h  simp_loggerimpl.cpp  simp_loggerimpl.h  simp_loglevel.h
src/core/: CMakeLists.txt  simp_socket.h
src/include/: simp_types.h
src/include/base/: simp_helper.h
src/include/log/: simp_logger.h
